config(IAC): Update ansible config for jenkins, gitlab_runner

--- a/infrastructure/dev/ansible/jenkins.yml
+++ b/infrastructure/dev/ansible/jenkins.yml
@@ -7,6 +7,7 @@
   roles:
       - role: geerlingguy.java
       - role: geerlingguy.jenkins
+      - role: docker
 
 - hosts: jenkins
   become: yes
