--- a/infrastructure/dev/ansible/gitlab_runner.yml
+++ b/infrastructure/dev/ansible/gitlab_runner.yml
@@ -5,9 +5,11 @@
   roles:
       - riemers.gitlab-runner
   vars:
-      gitlab_runner_coordinator_url: "{{ gitlab_url }}" # http://gitlab.local
-      gitlab_runner_registration_token: "{{ gitlab_project_token }}" #'GR1348941HsXrsdhmEpdap3ws9JNo'
+      gitlab_runner_coordinator_url: '{{ gitlab_url }}' # http://gitlab.local
+      gitlab_runner_registration_token: '{{ gitlab_project_token }}' #'GR1348941HsXrsdhmEpdap3ws9JNo'
       https_local: true
+      gitlab_ip: '192.168.140.31'
+      gitlab_host: 'gitlab.local'
       gitlab_runner_runners:
           - name: 'runner-dev-shell'
             executor: shell
