config(docker): update config for jenkins

--- a/infrastructure/dev/helper/docker-compose.yml
+++ b/infrastructure/dev/helper/docker-compose.yml
@@ -11,6 +11,7 @@ services:
             - /usr/bin/docker:/usr/bin/docker
             - ../ansible:/data/ansible
             - ../terraform:/data/terraform
+            - ../helper:/data/helper
         # command: 
 
 volumes:
